--- a/style.css
+++ b/style.css
@@ -57,8 +57,7 @@ h1 a {
 .inGameButtons {
   width: 720px;
   height: 480px;
-  padding-top: 10px;
-  padding-right: 10px;
+  padding: 10px;
   display: flex;
   justify-content: flex-end;
   align-items: start;
@@ -68,6 +67,50 @@ h1 a {
 
 .inGameButtons img {
   height: 38px;
+}
+
+.inGameSettings {
+  display: flex;
+  justify-content: flex-end;
+  align-items: start;
+  position: absolute;
+  cursor: pointer;
+}
+
+.controllPepe {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  position: absolute;
+  cursor: pointer;
+}
+
+.controllButton {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(218, 165, 32);
+  padding: 5px 42px;
+  border-radius: 8px;
+}
+
+.move {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.interact {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.controllPepe {
+  padding-bottom: 8px;
 }
 
 .sound {
@@ -240,6 +283,68 @@ h1 a {
   width: auto !important;
 }
 
+.controllPepe {
+  display: none;
+}
+
+.overImprintSymbol img {
+  height: 42px;
+  position: absolute;
+  left: 0;
+  padding: 5px 0 0 5px;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
+
+.bgblack {
+  height: 100vh;
+  width: 100vw;
+  z-index: 99999;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(102, 90, 90, 0.836);
+}
+
+.dialogBox {
+  display: flex;
+  align-items: center;
+  background-color: goldenrod;
+  padding: 25px;
+  border-radius: 25px;
+}
+
+.titleSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.closeButton {
+  border: 2px solid black;
+  border-radius: 50px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.closeButton:hover {
+  background-color: rgb(163, 128, 30);
+  padding: 5px;
+}
+
+.titleImprint {
+  font-weight: bold;
+  letter-spacing: 3px;
+}
+
 @media only screen and (max-width: 719px) {
   canvas {
     width: 100%;
@@ -287,8 +392,11 @@ h1 a {
     height: 100vh;
   }
 
-.keys {
-  padding-top: 8px;
-}
+  .keys {
+    display: none;
+  }
 
+  .controllPepe {
+    display: flex;
+  }
 }
